fix: vertical align tag img

--- a/wp-content/themes/techcomfort/assets/scss/_global.scss
+++ b/wp-content/themes/techcomfort/assets/scss/_global.scss
@@ -63,8 +63,8 @@ ul {
 }
 
 img {
-  width:   100%;
-  display: flex;
+  width:          100%;
+  vertical-align: middle;
 }
 
 h2 {
